--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
-ul > li {
+/*ul > li {
   display: inline;
   list-style-type: none;
   margin: 5px 15px 0 15px;
   background-color: goldenrod;
   padding: 5px;
+}*/
+#list-view {
+  display: block;
+  float: left;
 }
-
 .visible {
   display: block;
 }
@@ -14,6 +17,7 @@ ul > li {
   display: none;
 }
 
-body {
+/*body {
   font-size: 2em;
-}
+  background-color: 
+}*/
