--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ margin: 0px 0px;
 padding: 20px 5px 25px 0;
 }
 
-#listview{
+#listview {
   float: left;
   display: inline;
 }
@@ -30,9 +30,9 @@ padding: 20px 5px 25px 0;
   box-sizing: border-box;
   border: 2px solid black;
   background-color: #4DD7FA;
-  float: right;
+  float: left;
   width: 25%;
-  /*margin-top: 2px;*/
+  margin-left: 10px;
   height: 400px;
 }
 
