--- a/style.css
+++ b/style.css
@@ -1,11 +1,5 @@
-/*ul > li {
-  display: inline;
-  list-style-type: none;
-  margin: 5px 15px 0 15px;
-  background-color: goldenrod;
-  padding: 5px;
-}*/
-#list-view {
+
+/*#list-view {
   display: block;
   float: left;
 }
@@ -17,7 +11,6 @@
   display: none;
 }
 
-/*body {
-  font-size: 2em;
-  background-color: 
+.genre-table {
+  position: right;
 }*/
